syntax = "proto3";
package twilightproject.nyks.volt;

//import "gogoproto/gogo.proto";

option go_package = "github.com/twilight-project/nyks/x/volt/types";

message EventReserveWithdrawSnapshot {
    string message = 1;
    uint64 reserveId = 2;
    uint64 roundId = 3;
}

message EventRefundTxSnapshot {
    string message = 1;
    uint64 reserveId = 2;
    uint64 roundId = 3;
}